@@ -2,10 +2,10 @@
 from email.Message import Message
 from email.Utils import formatdate
 
+from zope.interface import implements
 from twisted.internet import defer
 
 from buildbot import interfaces
-from buildbot.twcompat import implements
 from buildbot.status import base, mail
 from buildbot.status.builder import SUCCESS, WARNINGS
 
@@ -29,11 +29,7 @@ class TinderboxMailNotifier(mail.MailNotifier):
     tinderbox option.
 
     """
-    if implements:
-        implements(interfaces.IEmailSender)
-    else:
-        __implements__ = (interfaces.IEmailSender,
-                          base.StatusReceiverMultiService.__implements__)
+    implements(interfaces.IEmailSender)
 
     compare_attrs = ["extraRecipients", "fromaddr", "categories", "builders",
                      "addLogs", "relayhost", "subject", "binaryURL", "tree",
