@@ -1,5 +1,8 @@
 2006-12-11  Brian Warner  <warner@lothar.com>
 
+	* buildbot/twcompat.py (implements): remove this method
+	* buildbot/*: import implements() from zope.interface directly
+
 	* buildbot/status/mail.py: stop falling back to importing
 	twisted.protocols.smtp.sendmail, now that we don't need tw-1.3.0
 	support
